--- a/Core/Core/Features/Modules/ModuleList/ModuleListViewController.storyboard
+++ b/Core/Core/Features/Modules/ModuleList/ModuleListViewController.storyboard
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="23727" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22685"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23721"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -22,7 +21,7 @@
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 <view key="tableFooterView" contentMode="scaleToFill" id="EF8-7Z-xiu" customClass="ListBackgroundView" customModule="Core" customModuleProvider="target">
-                                    <rect key="frame" x="0.0" y="144.5" width="375" height="252.5"/>
+                                    <rect key="frame" x="0.0" y="165" width="375" height="252.5"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <subviews>
                                         <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="a9E-bq-N0r">
@@ -87,23 +86,23 @@
                                 </view>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ModuleItemCell" id="aAq-Ui-Stp" customClass="ModuleItemCell" customModule="Core" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="50" width="375" height="66.5"/>
+                                        <rect key="frame" x="0.0" y="50" width="375" height="87"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="aAq-Ui-Stp" id="UBc-rt-n2v">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="66.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="87"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="rv6-mL-EtC">
-                                                    <rect key="frame" x="18" y="0.0" width="341" height="66"/>
+                                                    <rect key="frame" x="18" y="0.0" width="341" height="86.5"/>
                                                     <subviews>
                                                         <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="lwl-X5-mNS">
-                                                            <rect key="frame" x="0.0" y="8" width="24" height="50"/>
+                                                            <rect key="frame" x="0.0" y="18.5" width="24" height="50"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="width" constant="24" id="jTw-KY-W6y"/>
                                                             </constraints>
                                                         </imageView>
                                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="big-gi-hFf">
-                                                            <rect key="frame" x="28" y="15" width="193" height="36.5"/>
+                                                            <rect key="frame" x="28" y="8" width="193" height="70.5"/>
                                                             <subviews>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Module Item" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="idp-ZT-sKj" customClass="DynamicLabel" customModule="Core" customModuleProvider="target">
                                                                     <rect key="frame" x="0.0" y="0.0" width="193" height="19.5"/>
@@ -123,17 +122,35 @@
                                                                         <userDefinedRuntimeAttribute type="string" keyPath="textColorName" value="textDark"/>
                                                                     </userDefinedRuntimeAttributes>
                                                                 </label>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" text="Due Apr 15 at 10:48 AM" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ifT-A6-evV" customClass="DynamicLabel" customModule="Core" customModuleProvider="target">
+                                                                    <rect key="frame" x="0.0" y="36.5" width="193" height="17"/>
+                                                                    <fontDescription key="fontDescription" type="system" weight="medium" pointSize="14"/>
+                                                                    <color key="textColor" red="0.5450980392" green="0.58823529409999997" blue="0.61960784310000006" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                    <userDefinedRuntimeAttributes>
+                                                                        <userDefinedRuntimeAttribute type="string" keyPath="textColorName" value="textDark"/>
+                                                                    </userDefinedRuntimeAttributes>
+                                                                </label>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" text="Due Apr 15 at 10:48 AM" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kgs-ZU-zbe" customClass="DynamicLabel" customModule="Core" customModuleProvider="target">
+                                                                    <rect key="frame" x="0.0" y="53.5" width="193" height="17"/>
+                                                                    <fontDescription key="fontDescription" type="system" weight="medium" pointSize="14"/>
+                                                                    <color key="textColor" red="0.5450980392" green="0.58823529409999997" blue="0.61960784310000006" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                    <userDefinedRuntimeAttributes>
+                                                                        <userDefinedRuntimeAttribute type="string" keyPath="textColorName" value="textDark"/>
+                                                                    </userDefinedRuntimeAttributes>
+                                                                </label>
                                                             </subviews>
                                                         </stackView>
                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="L9I-ND-fkY">
-                                                            <rect key="frame" x="225" y="21" width="24" height="24"/>
+                                                            <rect key="frame" x="225" y="31.5" width="24" height="24"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="height" constant="24" id="H3n-PE-mCB"/>
                                                                 <constraint firstAttribute="width" constant="24" id="UiW-UD-5Ho"/>
                                                             </constraints>
                                                         </imageView>
                                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VJK-jg-cka" userLabel="Publish Control" customClass="ModulePublishControl" customModule="Core" customModuleProvider="target">
-                                                            <rect key="frame" x="253" y="0.0" width="88" height="66"/>
+                                                            <rect key="frame" x="253" y="0.0" width="88" height="86.5"/>
                                                             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="width" constant="88" id="uFQ-Za-4b3"/>
@@ -167,9 +184,11 @@
                                             <outlet property="completedStatusView" destination="L9I-ND-fkY" id="KIE-5U-6j3"/>
                                             <outlet property="contentStackView" destination="rv6-mL-EtC" id="2oC-TW-uxC"/>
                                             <outlet property="contentStackViewTrailingConstraint" destination="kW2-bP-Zeh" id="l8z-HK-Lqy"/>
-                                            <outlet property="dueLabel" destination="SK2-Ab-F0Z" id="vEC-W0-b2n"/>
+                                            <outlet property="dueDateLabel1" destination="SK2-Ab-F0Z" id="cod-XL-f4k"/>
+                                            <outlet property="dueDateLabel2" destination="ifT-A6-evV" id="9EN-zT-OSd"/>
                                             <outlet property="iconView" destination="lwl-X5-mNS" id="bgO-sR-lZK"/>
                                             <outlet property="indentConstraint" destination="gj0-Xh-gMC" id="81H-PG-FGS"/>
+                                            <outlet property="miscSubtitleLabel" destination="kgs-ZU-zbe" id="C41-Me-psW"/>
                                             <outlet property="nameLabel" destination="idp-ZT-sKj" id="xXf-gg-CFl"/>
                                             <outlet property="publishControl" destination="VJK-jg-cka" id="YjT-yC-6xh"/>
                                         </connections>
@@ -213,23 +232,6 @@
             <point key="canvasLocation" x="-545" y="-83"/>
         </scene>
     </scenes>
-    <designables>
-        <designable name="ECd-PX-fxS">
-            <size key="intrinsicContentSize" width="263" height="19.5"/>
-        </designable>
-        <designable name="GQS-7c-kQa">
-            <size key="intrinsicContentSize" width="111.5" height="24"/>
-        </designable>
-        <designable name="SK2-Ab-F0Z">
-            <size key="intrinsicContentSize" width="156.5" height="17"/>
-        </designable>
-        <designable name="idp-ZT-sKj">
-            <size key="intrinsicContentSize" width="94" height="19.5"/>
-        </designable>
-        <designable name="laA-st-1fS">
-            <size key="intrinsicContentSize" width="157" height="169"/>
-        </designable>
-    </designables>
     <resources>
         <image name="PandaBlocks" width="157" height="169"/>
         <systemColor name="systemBackgroundColor">
